--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1>Hello,<span></span></h1>
                 <h1>My Name is<span></span></h1>
                 <h1>Walid<span></span></h1>
-                <a href="#" type="button" class="cta">About Me</a>
+                <a href="#about" type="button" class="cta">About Me</a>
             </div>
         </div>
     </section>
